--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.2
       with:
-        server: ${{ secrets.ftp_host }}
-        username: ${{ secrets.ftp_user }}
-        password: ${{ secrets.ftp_password }}
-        LOCAL_DIR: build
-        METHOD: sftp
-        PORT: 22
+        ftp-server: ${{ secrets.ftp_host }}
+        ftp-username: ${{ secrets.ftp_user }}
+        ftp-password: ${{ secrets.ftp_password }}
+       
