--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
       with:
         server: ${{ secrets.ftp_host }}
         username: ${{ secrets.ftp_user }}
-        ssh_private_key: ${{ secrets.ftp_password }} 
-       
+        password: ${{ secrets.ftp_password }}
+        
