--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
         port: 22
-        localPath: './mysite/index.js'
-        remotePath: './'
+        local-dir: './mysite/index.js'
+        method: sftp
         
