--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
         port: 22
-        protocol: sftp
+        ssh_private_key: ${{ secrets.ftp_key }}
         
        
         
