--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,12 @@
 version: "3.9"
 
 services:
-    client:
-        image: nginx
+    app:
+        container_name: app
+        image: app
+        build:
+            context: .
+            dockerfile: Dockerfile
+        restart: always
         ports:
-            - 80:80
-        volumes:
-            - ./src:/usr/share/nginx/html
+            - "8080:8080"
