--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,9 @@
-version: "3.9"
-
-services:
-    app:
-        container_name: app
-        image: app
-        build:
-            context: .
-            dockerfile: Dockerfile
-        restart: always
-        ports:
-            - "8080:8080"
+web:
+  image: nginx
+  volumes:
+   - ./templates:/etc/nginx/templates
+  ports:
+   - "8080:80"
+  environment:
+   - NGINX_HOST=leoproti.com.br
+   - NGINX_PORT=80
