--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
         username: ${{ secrets.ftp_user }}
         # password: ${{ secrets.ftp_password }}
         server-dir: '/usr/share/nginx/html/'
-        ssh_private_key: ${{ secrets.private_key }}
+        key: ${{ secrets.private_key }}
+        port: 22
         
         
        
