--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,13 @@ jobs:
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.2
+      uses: webfactory/ssh-agent@v0.7.0
       with:
         server: ${{ secrets.ftp_host }}
         username: ${{ secrets.ftp_user }}
-        # password: ${{ secrets.ftp_password }}
+        password: ${{ secrets.ftp_password }}
         server-dir: '/usr/share/nginx/html/'
-        key: ${{ secrets.private_key }}
+        ssh-private-key: ${{ secrets.private_key }}
         port: 22
         
         
