--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
         remote_path: '/usr/share/nginx/html/'
+        local_path: './mysite/*'
         ssh_private_key: ${{ secrets.private_key }}
         port: 22
         
