--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         password: ${{ secrets.ftp_password }}
         remote_path: '/usr/share/nginx/html/'
         local_path: './mysite/*'
+        ssh_private_key: ${{ secrets.private_key }}
         port: 22
         
         
